# llm-ode

./: LICENSE  README.md  main.py  pyproject.toml  serve_and_run.sh
baselines/: odeformer.py  pysr.py  sindy.py
data/: dataset.py  equations.py
docs/: index.html
docs/assets/: Bibtex.txt
llmode/: equation.py  island.py  llm.py  llmode.py  program.py  system.py  utils.py
tests/: test_equation.py  test_pf.py  test_system.py  utils.py
