[project]
name = "llm-ode-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "accelerate==1.10.1",
    "findiff==0.12.1",
    "huggingface-hub==0.34.4",
    "matplotlib==3.10.6",
    "numpy==2.2.6",
    "pandas==2.3.2",
    "pytest==8.4.2",
    "ray>=2.54.0",
    "scipy==1.16.1",
    "sympy==1.14.0",
    "torch>=2.9.0",
    "tqdm==4.67.1",
    "transformers==4.56.0",
    "vllm==0.13.0",
]
